--- a/heal.css
+++ b/heal.css
@@ -1,7 +1,7 @@
- /* Likuxas */
-#chat-messages .id-4049810 .badge-box i.bdg
+ /* Puukjeens */
+#chat-messages .id-4734845 .badge-box i.bdg
 {
-        background-image:       url('https://nbot.lt/mta-images/admin.png');
+        background-image:       url('http://bildites.lv/images/cbmg6n27/28276/square');
         background-size:        cover;
 }
 
