--- a/heal.css
+++ b/heal.css
@@ -5,11 +5,11 @@
         background-size:        cover;
 }
 
-/* Simplelele */
+/* akka */
 
-#chat-messages .id-16538423 .badge-box i.bdg
+#chat-messages .id-4446194 .badge-box i.bdg
 {
-        background-image:       url('https://nbot.lt/mta-images/awp.png');
+        background-image:       url('https://s-media-cache-ak0.pinimg.com/custom_covers/30x30/521502900539646559_1356319456.jpg');
         background-size:        cover;
 }
 
