--- a/heal.css
+++ b/heal.css
@@ -191,13 +191,13 @@
     background-size: 15px auto;
 }
 
-/* Erka */
+/*Puukjeens*/
 
-[data-cid^="5246980-"] .msg .from .un {
+[data-cid^="4734845-"] .msg .from .un {
     position: relative;
     left:-1px;
     padding-left: 18px;
-    background-image: url('https://nbot.lt/mta-images/debesis.png');
+    background-image: url('http://www.bildites.lv/images/2r3dtwkdnidogjg1acs.png');
     background-repeat: no-repeat;
     background-position: -1px center;
     background-size: 15px auto;
