--- a/heal.css
+++ b/heal.css
@@ -197,7 +197,7 @@
     position: relative;
     left:-1px;
     padding-left: 18px;
-    background-image: url('https://www.irononsticker.com/images/2012/09/22/Dragon%20Head%20Mythical%20Creatures.jpg');
+    background-image: url('https://nbot.lt/mta-images/goldsub.png');
     background-repeat: no-repeat;
     background-position: -1px center;
     background-size: 15px auto;
