--- a/heal.css
+++ b/heal.css
@@ -13,10 +13,10 @@
         background-size:        cover;
 }
 
- /* Izabele */
-#chat-messages .id-2987576 .badge-box i.bdg
+ /* Inese */
+#chat-messages .id-4106352 .badge-box i.bdg
 {
-        background-image:       url('https://nbot.lt/mt-images/69.png');
+        background-image:       url('image.prntscr.com/image/be700cade7b44ca7bf35d186d3bc8518.png');
         background-size:        cover;
 }
 
