--- a/heal.css
+++ b/heal.css
@@ -16,7 +16,7 @@
  /* Inese */
 #chat-messages .id-4106352 .badge-box i.bdg
 {
-        background-image:       url('image.prntscr.com/image/be700cade7b44ca7bf35d186d3bc8518.png');
+        background-image:       url('http://image.prntscr.com/image/be700cade7b44ca7bf35d186d3bc8518.png');
         background-size:        cover;
 }
 
