--- a/heal.css
+++ b/heal.css
@@ -19,6 +19,12 @@
         background-image:       url('http://image.prntscr.com/image/be700cade7b44ca7bf35d186d3bc8518.png');
         background-size:        cover;
 }
+ /massiax/
+#chat-messages .id-23148605 .badge-box i.bdg
+{
+        background-image:       url('http://www.emoticone-gratuit.org/image/emoticone/jeux_video//51.gif');
+        background-size:        cover;
+}
 
 
 
